--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 html {
     background-image: linear-gradient( white, white, rgba(3, 213, 255),rgba(3, 213, 255));
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 0.5, 3fr, 0.5fr;
+    grid-template-rows: 200px, 500px,  100px, 100px, 100px;
+}
