--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-image: linear-gradient( white, white, rgba(3, 213, 255),rgba(3, 213, 255));
+    background-image: linear-gradient(white, white, rgba(3, 213, 255), rgba(3, 213, 255));
 }
 
 .container {
@@ -10,13 +10,31 @@ html {
 }
 
 
-.box5 {
+.box1 {
     background-color: lightgray;
-    
+    grid-row: 2/2;
+    grid-column: 3/2;
+    border: 10px solid black;
+
+
 }
 
-.box11 {
+.box2 {
     background-color: lightgrey;
+    grid-row: 5/4;
+    grid-column: 2/2;
+    border: 10px solid black;
+  
 }
 
+.box3 {
+    grid-template-columns: 1fr 1fr;
+    grid-row: 1/2;
+    grid-column: 2/2;
+}
 
+.logo {
+    grid-row: 1/2;
+    grid-column: 2/1;
+    height: 250px;
+}
