--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,31 @@ html {
 }
 
 .box3 {
+    display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-row: 1/2;
-    grid-column: 2/2;
+    grid-column: 2/3;
 }
 
 .logo {
     grid-row: 1/2;
     grid-column: 2/1;
     height: 250px;
+}
+
+nav {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background-color: lightgray;
+    align-self: center;
+    justify-self: center;
+    width: 50%;
+    text-align: center;
+    padding: 20px 10px;
+}
+
+nav a {
+    margin: 0px 20px;
+
 }
