--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,14 @@ a:hover {
 .container {
     display: grid;
     grid-template-columns: 1fr 10fr 1fr;
-    grid-template-rows: 250px 435px 70px 70px 70px;
+    grid-template-rows: 250px 453px 70px 70px 70px;
     grid-gap: 10px;
 }
 
 
 .box1 {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     background-color: lightgray;
     grid-row: 2/2;
     grid-column: 3/2;
@@ -63,6 +65,9 @@ nav a {
     font-size: 21px;
     text-decoration: none;
     color: black;
+}
 
-
+.dproduct {
+    height: 440px;
+    justify-self: center;
 }
