--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,12 @@ a:hover {
 
 .box1 {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 0.175fr 2fr;
     background-color: lightgray;
     grid-row: 2/2;
     grid-column: 3/2;
     border: 10px solid black;
+    padding: 10px;
 
 
 }
@@ -70,4 +71,10 @@ nav a {
 .dproduct {
     height: 440px;
     justify-self: center;
+}
+
+.line {
+    border-left: 3px solid black;
+    grid-column: 2/3;
+    height: 400px;
 }
