--- a/styles.css
+++ b/styles.css
@@ -138,3 +138,11 @@ h2 {
 .white {
     color: white;
 }
+
+.box5 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column: 2/2;
+    grid-row: 2/2;
+}
