--- a/styles.css
+++ b/styles.css
@@ -146,3 +146,31 @@ h2 {
     grid-column: 2/2;
     grid-row: 2/2;
 }
+
+.d1 {
+    grid-column: 1/2;
+    background-color: lightgrey;
+    border: 10px solid black;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.d2 {
+    grid-column: 2/2;
+    background-color: lightgrey;
+    border: 10px solid black;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.d3 {
+    background-color: lightgrey;
+    border: 10px solid black;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.p1 {
+    height: 440px;
+    justify-self: center;
+}
