--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ a:hover {
 .container1 {
     display: grid;
     grid-template-columns: 1fr 10fr 1fr;
-    grid-template-rows: 300px 500px;
+    grid-template-rows: 300px 550px;
 }
 
 .box1 {
@@ -58,6 +58,7 @@ a:hover {
     grid-template-rows: 1fr 1fr 1fr;
     grid-row: 1/2;
     grid-column: 2/3;
+    
 }
 
 .logo {
@@ -86,7 +87,7 @@ nav a {
 }
 
 .dproduct {
-    height: 440px;
+    height: 420px;
     justify-self: center;
 }
 
@@ -173,4 +174,20 @@ h2 {
 .p1 {
     height: 440px;
     justify-self: center;
+    padding-left: 55px;
+    padding-top: 20px;
+}
+
+.p2 {
+    height: 440px;
+    justify-self: center;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.p3 {
+    height: 440px;
+    justify-self: center;
+    padding-top: 20px;
+    padding-left: 20px;
 }
