--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,13 @@ a:hover {
 .container1 {
     display: grid;
     grid-template-columns: 1fr 10fr 1fr;
-    grid-template-rows: 300px 550px;
+    grid-template-rows: 300px 650px;
+}
+
+.container2 {
+    display: grid;
+    grid-template-columns: 1fr 10fr 1fr;
+    grid-template-rows: 250px 500px;
 }
 
 .box1 {
@@ -140,7 +146,7 @@ h2 {
     color: white;
 }
 
-.box5 {
+.box5 { 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
@@ -226,4 +232,8 @@ h2 {
     justify-self: center;
     padding-top: 20px;
     padding-left: 20px;
+}
+
+.counter {
+    justify-self: center;
 }
