--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,58 @@
 html {
-    background-image: linear-gradient(white, white, rgba(3, 213, 255), rgba(3, 213, 255));
+    background-image: linear-gradient(white, white, rgba(3, 213, 255), rgba(3, 213, 255));  /* makes the background of the entire website a liner gradient */
 }
 
-@font-face {
+@font-face { /* established the font family and the url */
     font-family: myFont;
     src: url(fonts/Valorant\ Font.ttf);
 }
 
-html {
-    font-family: myFont;
+html { /* makes all of the text on the website have the established font family */
+    font-family: myFont; 
 }
 
-a:hover {
+a:hover { /* makes a hover state for the nav links */
     color: grey;
 }
 
-.container {
+.container { /* creates the main container and establishes all of the grid template rows and column values for the home page */
     display: grid;
     grid-template-columns: 1fr 10fr 1fr;
-    grid-template-rows: 250px 453px 70px 70px 70px;
-    grid-gap: 10px;
+    grid-template-rows: 27vh 50vh 7vh 8vh 7vh;
 }
 
-.container1 {
+.container1 { /* creates the main container and establishes all of the grid template rows and column values for the products page */
     display: grid;
     grid-template-columns: 1fr 10fr 1fr;
-    grid-template-rows: 300px 650px;
+    grid-template-rows: 27vh 75vh;
 }
 
-.container2 {
+.container2 { /* creates the main container and establishes all of the grid template rows and column values for the sizing page */
     display: grid;
     grid-template-columns: 1fr 10fr 1fr;
-    grid-template-rows: 300px 500px;
+    grid-template-rows: 27vh 65vh;
 }
 
-.box1 {
+.box1 { /* creates the main display box on the home page and establishes its grid template columns, backgorund color, position, border color, padding and drop shadows */
     display: grid;
     grid-template-columns: 1fr 0.175fr 2fr;
     background-color: lightgray;
     grid-row: 2/2;
     grid-column: 3/2;
-    border: 10px solid black;
-    padding: 10px;
-    box-shadow: 5px 10px 20px;
+    border: 0.6vw solid black;
+    padding: 0.6vw;
+    box-shadow: 0.3vw 0.6vw 1.2vw;
 }
 
-.box2 {
+.box2 {  
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 50px;
+    grid-template-rows: 3vw;
     background-color: lightgrey;
     grid-row: 5/4;
     grid-column: 2/2;
-    border: 10px solid black;
-    box-shadow: 5px 10px 20px;
+    border: 0.6vw solid black;
+    box-shadow: 0.3vw 0.6vw 1.2vw;
 
 }
 
@@ -69,7 +68,7 @@ a:hover {
 .logo {
     grid-row: 1/2;
     grid-column: 2/1;
-    height: 250px;
+    height: 25vh;
 }
 
 nav {
@@ -80,60 +79,59 @@ nav {
     justify-self: center;
     width: 100%;
     text-align: center;
-    padding: 20px 10px;
-    border: 10px solid black;
-    box-shadow: 5px 10px 20px;
+    padding: 1.2vw 0.6vw;
+    border: 0.6vw solid black;
+    box-shadow: 0.3vw 0.6vw 1.2vw;
 }
 
 nav a {
-    margin: 0px 70px;
-    font-size: 21px;
+    margin: 4vw;
+    font-size: 2.3vh;
     text-decoration: none;
     color: black;
 }
 
 .dproduct {
-    height: 420px;
+    height: 45vh;
     justify-self: center;
 }
 
 .line {
-    border-left: 3px solid black;
+    border-left: 0.2vw solid black;
     grid-column: 2/3;
-    height: 400px;
+    height: 44vh;
 }
 
 
 .text {
     justify-self: center;
+
+    
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 3vw;
     justify-self: center;
 }
 
 h2 {
-    font-size: 25px;
+    font-size: 3vh;
 }
 
 .text2 {
-    align-self: top;
-    font-size: 30px;
+    font-size: 3vh;
     justify-self: center;
     align-self: center;
 }
 
 .text3 {
-    align-self: top;
-    font-size: 30px;
+    font-size: 3vh;
     justify-self: center;
     align-self: center;
 }
 
 .text4 {
-    align-self: top;
-    font-size: 16px;
+    font-size: 1.7vh;
     justify-self: center;
     align-self: center;
 }
@@ -142,7 +140,7 @@ h2 {
     color: grey;
 }
 
-.white {
+strong {
     color: white;
 }
 
@@ -155,92 +153,96 @@ h2 {
 }
 
 .box5>div {
-    box-shadow: 5px 10px 20px;
+    box-shadow: 0.3vw 0.6vw 1.2vw;
 }
 
-.d1 {
+.d1 { /* establishes the position, color, border color and padding of display box 1 on products page */
     grid-column: 1/2;
     background-color: lightgrey;
-    border: 10px solid black;
-    margin-left: 20px;
-    margin-right: 20px;
+    border: 0.6vw solid black;
+    margin-left: 1.2vw;
+    margin-right: 1.2vw;
 }
 
-.d1>h1 {
-    font-size: 20px;
+.d1>h1 { /* sets the font size and position of the first line of text in display box 1 on products page */
+    font-size: 2.5vh;
     text-align: center;
 }
 
-.d1>h2 {
-    font-size: 20px;
+.d1>h2 { /* sets the font size and position of the second line of text in display box 1 on products page */
+    font-size: 2.5vh;
     text-align: center;
 }
 
 .d2 {
     grid-column: 2/2;
     background-color: lightgrey;
-    border: 10px solid black;
-    margin-left: 20px;
-    margin-right: 20px;
+    border: 0.6vw solid black;
+    margin-left: 1.2vw;
+    margin-right: 1.2vw;
 }
 
-.d2>h1 {
-    font-size: 20px;
+.d2>h1 { /* sets the font size and position of the first line of text in display box 2 on products page */
+    font-size: 2.5vh;
     text-align: center;
     color: white;
 }
 
-.d2>h2 {
-    font-size: 20px;
+.d2>h2 { /* sets the font size and position of the second line of text in display box 2 on products page */
+    font-size: 2.5vh;
     text-align: center;
 }
 
 .d3 {
     background-color: lightgrey;
-    border: 10px solid black;
-    margin-left: 20px;
-    margin-right: 20px;
+    border: 0.6vw solid black;
+    margin-left: 1.2vw;
+    margin-right: 1.2vw;
 }
 
-.d3>h1 {
-    font-size: 20px;
+.d3>h1 { /* sets the font size and position of the first line of text in display box 3 on products page */
+    font-size: 2.5vh;
     text-align: center;
     color: grey;
 }
 
-.d3>h2 {
-    font-size: 20px;
+.d3>h2 { /* sets the font size and position of the second line of text in display box 3 on products page */
+    font-size: 2.5vh;
     text-align: center;
 }
 
-.p1 {
-    height: 440px;
+.p1 { /* sets the size and position of product 1 image */
+    height: 25vw;
     justify-self: center;
-    padding-left: 55px;
-    padding-top: 20px;
+    padding-left: 2vw;
+    padding-top: 2vh;
+    padding-right: 3vh
 }
 
-.p2 {
-    height: 440px;
+.p2 { /* sets the size and position of product 2 image */
+    height: 25vw;
     justify-self: center;
-    padding-top: 20px;
-    padding-left: 20px;
+    padding-top: 2vh;
+    padding-left: 2vh;
+    padding-right: 2vh;
 }
 
-.p3 {
-    height: 440px;
+.p3 { /* sets the size and position of product 3 image */
+    height: 25vw;
     justify-self: center;
-    padding-top: 20px;
-    padding-left: 20px;
+    padding-top: 2vh;
+    padding-left: 2vh;
+    padding-right: 2vh;
 }
 
-.counter {
+.counter { /* makes the counter display in the center */
     justify-self: center;
 }
 
-.box27 {
+.box27 { /* creates box that contains the size calculator and establishes its varialbes */
     grid-column: 2/2;
     grid-row: 2/2;
     background-color: lightgrey;
-    border: 10px solid black;
+    border: 0.6vw solid black;
+    box-shadow: 0.3vw 0.6vw 1.2vw;
 }
